force-app/main/default/objects/UserPoll__c/UserPoll__c.object-meta.xml
<CustomObject>
    <description>Custom object to run a user poll</description>
    <label>User Poll</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Record Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Polls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>