force-app/main/default/objects/UserPoll__c/fields/Answer1__c.field-meta.xml
<CustomField>
    <fullName>Answer1__c</fullName>
    <label>Answer 1</label>
    <length>60</length>
    <type>Text</type>
</CustomField>