force-app/main/default/objects/UserPoll__c/fields/Answer_2__c.field-meta.xml
<CustomField>
    <fullName>Answer_2__c</fullName>
    <label>Answer 2</label>
    <length>60</length>
    <type>Text</type>
</CustomField>