force-app/main/default/objects/UserPoll__c/fields/Answer_3__c.field-meta.xml
<CustomField>
    <fullName>Answer_3__c</fullName>
    <label>Answer 3</label>
    <length>60</length>
    <type>Text</type>
</CustomField>