force-app/main/default/objects/UserPoll__c/fields/Poll_Id__c.field-meta.xml
<CustomField>
    <fullName>Poll_Id__c</fullName>
    <description>Poll Id</description>
    <label>Poll Id</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>