force-app/main/default/objects/UserPoll__c/fields/Skipped__c.field-meta.xml
<CustomField>
    <fullName>Skipped__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skipped</label>
    <type>Checkbox</type>
</CustomField>