force-app/main/default/objects/UserPoll__c/recordTypes/UserPoll.recordType-meta.xml
<RecordType>
    <fullName>UserPoll</fullName>
    <active>true</active>
    <label>UserPoll</label>
</RecordType>